examples/test/testpolicy729.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy729
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key13: value39
      key19: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value26
          key28: value39
      podSelector:
        matchLabels:
          key44: value20
          key24: value22
